# semafs

./: .gitignore  CLAUDE.md  LICENSE  openai_semafs_demo.py  pyproject.toml  readme.md  requirements.txt  run_latest_semafs_full_e2e.py  run_latest_semafs_real_llm.py
.github/workflows/: deploy-docs.yml
data/: demo_self_organization.en.db  demo_self_organization.zh.db  demo_zh.db  test_en.py  test_zh.py
docs/: .gitignore  index.md  package-lock.json  package.json  slides.md
docs/.history/: 2026-03-20_value_benchmark.md
docs/.vitepress/: config.ts
docs/api/: node.md  operations.md  repository.md  semafs.md  strategy.md  views.md
docs/design/: adr.md  architecture.md  data-model.md  evolution.md  maintenance.md  philosophy.md  transactions.md
docs/guide/: agent-memory.md  concepts.md  deployment.md  introduction.md  llm-integration.md  maintenance.md  operations.md  quickstart.md  (+5 more)
scripts/: backfill_category_meta.py  cleanup_ambiguous_categories.py  regression_checks.py  run_latest_semafs_smoke.py  test.sh
semafs/: __init__.py  __main__.py  cli.py  exceptions.py  executor.py  export.py  exporter.py  interface.py  logging_utils.py  renderer.py  run.py  semafs.py  serve.py  uow.py  utils.py  view.py
tests/: __init__.py  conftest.py  fixtures.py  memory_repo.py  test_core.py  test_preference_data.py  test_semafs.py
view/: root.ideas.md  root.learning.md  root.md  root.personal.md  root.work.management.deployment.knowledge.md  root.work.management.deployment.md  root.work.management.development.md  root.work.management.md  root.work.md  root.work.tech.coding.md  root.work.tech.coding.practices.md  root.work.tech.debt.md  root.work.tech.deployment.md  root.work.tech.dev.md  root.work.tech.dev.principles.md  root.work.tech.development.md  root.work.tech.development.practices.md  root.work.tech.documentation.md  root.work.tech.documents.md  root.work.tech.grouping.md  root.work.tech.management.guidelines.md  root.work.tech.management.md  root.work.tech.management.practices.md  root.work.tech.md  root.work.tech.practices.md  root.work.tech.project.management.md  root.work.tech.project.md  root.work.tech.security.md  root.work.tech.sharing.md  root.work.tech.software.md  root.work.tech.software.practices.md
(+105 files in other folders)
