[build-system]

requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "semafs"
version = "0.2.1"
description = "A semantic filesystem that uses LLM-powered strategies to automatically organize knowledge fragments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zhilin Wang"}
]
keywords = ["semantic", "filesystem", "llm", "knowledge-base", "organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]

openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
all = [
    "openai>=2.24.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
semafs = "semafs.cli:main"

[project.urls]

# Homepage = "https://github.com/yourusername/semafs"
# Documentation = "https://github.com/yourusername/semafs#readme"

Repository = "https://github.com/linzwcs/semafs"
Issues = "https://github.com/linzwcs/semafs/issues"

[tool.setuptools.packages.find]

where = ["."]
include = ["semafs*"]
exclude = ["tests*"]

[tool.pytest.ini_options]

minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | semafs-v0
)/
'''

[tool.ruff]

line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".pytest_cache",
    "build",
    "dist",
    "semafs-v0",
]
